--- a/src/components/upload.css
+++ b/src/components/upload.css
@@ -1,66 +1,26 @@
-.vvv {
-    font-size: 14px;
-    color: #606060;
-    line-height: 24px;
-    margin-bottom: 20px;
-    text-align: left;
-    border: solid 1px #ccc;
-    /* border-bottom: none; */
-    background: #fff;
-}
-
-ul {
-    list-style: none;
-    padding-left: 0px;
-    margin: 0px;
-}
-
-.divType {
-    padding-left: 20px;
-    height: 38px;
-    line-height: 36px;
-    font-family: OpenSans-Semibold, Arial, sans-serif, Verdana, Helvetica;
-    font-size: 14px;
-    color: #444;
-    border-bottom: solid 1px #ccc;
-    background: #eee;
-    cursor: pointer;
-    /* user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -ms-user-select: none; */
-}
-
-.divTableStyle {
-    padding: 12px 20px 15px;
-    border-bottom: solid 1px #ccc;
-}
 
 .document-item{
     box-shadow: 4px 2px Gainsboro ;
     border: 1px solid #dacdcd;
     position: relative;
-    width: 200px;
-    
+    width: 170px;
     display: inline-block;
-    margin: 50px;
+    margin-left: 20px;
+    margin-bottom: 50px;
 }
 img{
     width: 200px;
-    height: 200px;
+    height: 300px;
     vertical-align: middle;
-    border: 0;
+    border: 2px solid black;
+    
       
 }
 .icon{
+    cursor: pointer;
     width: 30px;
     height: 30px;
-   
-}
-.line{
-    display: inline-block
-}
-.left{
-    display: inline-block;
+   margin-left: 20px;
+   margin-top: 5px;
+   margin-bottom: 10px;
 }
